# rover_global_localization

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
config/: ekf_global.yaml  navsat.yaml
launch/: global_localization.launch.py
